samples/_failures_safe/1761441066_08dc6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dd694a5.c:116: error: expected ‘;’, ‘,’ or ‘)’ at end of input
